samples/_failures_safe/1760960336_fbdbf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e6f4ab0.c: In function ‘main’:
./samples/SAFE/__tmp_6e6f4ab0.c:147:9: error: expected expression at end of input
  147 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_6e6f4ab0.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e6f4ab0.c:147:9: error: expected declaration or statement at end of input
